testsuite/tests/parser/should_fail/typeopsDataCon_A.stderr

typeopsDataCon_A.hs:1:10: error:
    Cannot parse an infix data constructor in a data/newtype declaration:
      Int :+ Int :+ Int
